// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Search/> renders Intermediate state correctly  1`] = `
<div>
  <div
    class="search--wrapper"
  >
    <div
      class="search"
    >
      <i
        class="icon magnifier -regular"
      >
        <svg
          height="1em"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M456.69,421.39,362.6,327.3a173.81,173.81,0,0,0,34.84-104.58C397.44,126.38,319.06,48,222.72,48S48,126.38,48,222.72s78.38,174.72,174.72,174.72A173.81,173.81,0,0,0,327.3,362.6l94.09,94.09a25,25,0,0,0,35.3-35.3ZM97.92,222.72a124.8,124.8,0,1,1,124.8,124.8A124.95,124.95,0,0,1,97.92,222.72Z"
          />
        </svg>
      </i>
      <label
        class="search-label"
      />
      <input
        class="search-input"
        role="searchbox"
        type="text"
        value=""
      />
      <button
        class="button search-close -secondary -regular -clear"
        type="button"
      >
        <div
          class="button--inner"
        >
          <i
            class="icon -success -small"
          >
            <svg
              height="1em"
              viewBox="0 0 512 512"
              width="1em"
            >
              <path
                d="M289.94,256l95-95A24,24,0,0,0,351,127l-95,95-95-95A24,24,0,0,0,127,161l95,95-95,95A24,24,0,1,0,161,385l95-95,95,95A24,24,0,0,0,385,351Z"
              />
            </svg>
          </i>
        </div>
      </button>
    </div>
    <div
      class="search--spacer"
    >
      <span
        class="text -regular -darker"
      >
        Velit dolore exercitationem distinctio ipsa numquam quisquam?
      </span>
      <a
        class="link -primary -regular -plain"
      >
        Change
      </a>
    </div>
  </div>
</div>
`;

exports[`<Search/> renders default state correctly 1`] = `
<div>
  <div
    class="search--wrapper"
  >
    <div
      class="search"
    >
      <i
        class="icon magnifier -regular"
      >
        <svg
          height="1em"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M456.69,421.39,362.6,327.3a173.81,173.81,0,0,0,34.84-104.58C397.44,126.38,319.06,48,222.72,48S48,126.38,48,222.72s78.38,174.72,174.72,174.72A173.81,173.81,0,0,0,327.3,362.6l94.09,94.09a25,25,0,0,0,35.3-35.3ZM97.92,222.72a124.8,124.8,0,1,1,124.8,124.8A124.95,124.95,0,0,1,97.92,222.72Z"
          />
        </svg>
      </i>
      <label
        class="search-label"
      />
      <input
        class="search-input"
        role="searchbox"
        type="text"
        value=""
      />
      <button
        class="button search-close -secondary -regular -clear"
        type="button"
      >
        <div
          class="button--inner"
        >
          <i
            class="icon -success -small"
          >
            <svg
              height="1em"
              viewBox="0 0 512 512"
              width="1em"
            >
              <path
                d="M289.94,256l95-95A24,24,0,0,0,351,127l-95,95-95-95A24,24,0,0,0,127,161l95,95-95,95A24,24,0,1,0,161,385l95-95,95,95A24,24,0,0,0,385,351Z"
              />
            </svg>
          </i>
        </div>
      </button>
    </div>
  </div>
</div>
`;
